<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showMedicine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:id="@+id/encabezado"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/fondo"
            >

            <ImageButton
                android:id="@+id/back"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/back"
                android:layout_width="70dp"
                android:background="@android:color/transparent"
                android:layout_height="85dp"
                android:src="@drawable/ic_back"/>

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/title_template"
                android:layout_marginLeft="70dp"
                android:text="Medicamento"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:layout_marginRight="90dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeMaxTextSize="48sp"
                app:autoSizeStepGranularity="2sp"
                />

            <ImageView
                android:id="@+id/tipo"
                android:layout_width="85dp"
                android:layout_height="75dp"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>

        <ScrollView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/edit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/update"
                        android:background="@drawable/button_design"
                        android:backgroundTint="#d6ce56"
                        android:textColor="@color/black"
                        app:backgroundTint="@null"
                        android:layout_alignParentLeft="true"
                        android:layout_marginRight="25dp"
                        android:drawableLeft="@android:drawable/ic_menu_edit"
                        android:paddingRight="10dp"/>

                    <Button
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/delete"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/button_design"
                        android:backgroundTint="@color/design_default_color_error"
                        app:backgroundTint="@null"
                        android:drawableRight="@android:drawable/ic_menu_delete"
                        android:paddingLeft="10dp"
                        />

                </RelativeLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    app:backgroundTint="@null"
                    android:backgroundTint="#dc9061"
                    android:layout_marginTop="20dp"
                    android:background="?android:attr/listDivider"
                    android:importantForAccessibility="no"/>

                <TextView
                    android:id="@+id/dosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dose"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="28dp"/>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:backgroundTint="#e59b6d"
                    app:backgroundTint="@null"
                    android:background="?android:attr/listDivider"
                    android:importantForAccessibility="no"/>

                <TextView
                    android:id="@+id/lapso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/every"
                    android:gravity="left"
                    android:textColor="@color/black"
                    android:textSize="28dp"/>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:backgroundTint="#eea577"
                    android:background="?android:attr/listDivider"
                    android:importantForAccessibility="no"
                    app:backgroundTint="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="28dp"
                    />

                <TextView
                    android:id="@+id/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="descripcion"
                    android:textSize="25dp"
                    android:gravity="left"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/does"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/button_design"
                    android:drawableLeft="@drawable/ic_does"
                    android:enabled="false"
                    android:padding="10dp"
                    android:backgroundTint="#a35d2f"
                    android:shadowColor="#954535"
                    android:text="@string/token"
                    android:textColor="#FFFFFF"
                    app:autoSizeTextType="uniform"
                    app:autoSizeMinTextSize="15sp"
                    app:autoSizeMaxTextSize="48sp"
                    app:autoSizeStepGranularity="2sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>